--- a/src/css/header.css
+++ b/src/css/header.css
@@ -27,7 +27,7 @@
   width: 100%;
   max-width: 251px;
   height: 100%;
-  background-color: #ffffff;  
+  background-color: #ffffff;
 }
 
 .header .top-bar {
@@ -54,7 +54,9 @@
 
 }
 
-.question, .bell, .gear {
+.question,
+.bell,
+.gear {
   position: relative;
   width: 24px;
   height: 24px;
@@ -62,19 +64,22 @@
   cursor: pointer;
 }
 
-.question:hover, .bell:hover, .gear:hover {
+.question:hover,
+.bell:hover,
+.gear:hover {
   border-radius: 50%;
   padding: 6px;
   background-color: rgba(187, 163, 163, 0.365);
   color: #ff8f00;
 }
 
-.gearNot:hover{
+.gearNot:hover {
   color: #ff8f00;
 }
 
 .notification-container {
   position: relative;
+  width: 100%;
 }
 
 .notification-box {
@@ -94,11 +99,11 @@
   flex-direction: column;
 }
 
-.notification-box::-webkit-scrollbar{
+.notification-box::-webkit-scrollbar {
   overflow: hidden;
 }
 
-.pic-container{
+.pic-container {
   width: 44px;
 }
 
@@ -284,7 +289,7 @@
   height: 1px;
   position: absolute;
   top: 100px;
-  
+
 }
 
 .header .designer-team {
@@ -362,4 +367,98 @@ a:hover {
 .logout:hover {
   background-color: rgba(243, 222, 173, 0.689);
   color: #ff8f00;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* Black with 50% transparency */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  /* Ensure the overlay is above other content */
+}
+
+.notified-form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 20%;
+}
+
+.notified-form-container {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.notified-form-container label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.notified-form-container select,
+.notified-form-container textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.notified-form-container .submit-notif {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.notified-form-container .cancel-notif {
+  background-color: #af4c4c;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 118px;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 18px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #555;
+}
+
+.button-container {
+  margin-top: 15px;
+}
+
+.success-message {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #4CAF50; /* Green color */
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 999; /* Ensure it's above other elements */
+  animation: fadeOut 3s forwards; /* Animation for fade-out effect */
 }
