--- a/src/css/header.css
+++ b/src/css/header.css
@@ -454,11 +454,24 @@ a:hover {
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #4CAF50; /* Green color */
+  background-color: #4CAF50;
+  /* Green color */
   color: white;
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  z-index: 999; /* Ensure it's above other elements */
-  animation: fadeOut 3s forwards; /* Animation for fade-out effect */
+  z-index: 999;
+  /* Ensure it's above other elements */
+  animation: fadeOut 3s forwards;
+  /* Animation for fade-out effect */
+}
+
+.sent-notify {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.sent-notify:hover {
+  color: #ff8f00;
 }
