--- a/src/css/inventory.css
+++ b/src/css/inventory.css
@@ -63,7 +63,8 @@
   cursor: pointer;
 }
 
-.add-button, .generate-report{
+.add-button,
+.generate-report {
   background-color: #ff8f00;
   color: #FFFFFF;
   border-radius: 5%;
@@ -73,7 +74,8 @@
   font-weight: bold;
 }
 
-.add-button:hover, .generate-report:hover{
+.add-button:hover,
+.generate-report:hover {
   color: #000;
   cursor: pointer;
 }
@@ -117,18 +119,22 @@ tbody tr:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
+  background: rgba(0, 0, 0, 0.5);
+  /* Black with 50% transparency */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Ensure the overlay is above other content */
+  z-index: 1000;
+  /* Ensure the overlay is above other content */
 }
 
 .add-form {
-  background: white; /* Set your desired form background color */
+  background: white;
+  /* Set your desired form background color */
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle box shadow */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* Optional: Add a subtle box shadow */
 }
 
 /* Optionally, you can add some transitions for a smoother effect */
@@ -142,10 +148,11 @@ tbody tr:hover {
 }
 
 .option.active {
-  color: #6e89e9; /* or any other style to highlight the active page */
+  color: #6e89e9;
+  /* or any other style to highlight the active page */
 }
 
-.option:hover{
+.option:hover {
   color: #ff8f00;
 }
 
@@ -203,19 +210,23 @@ tbody tr:hover {
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #4CAF50; /* Green color */
+  background-color: #4CAF50;
+  /* Green color */
   color: white;
   padding: 5px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  z-index: 999; /* Ensure it's above other elements */
-  animation: fadeOut 3s forwards; /* Animation for fade-out effect */
+  z-index: 999;
+  /* Ensure it's above other elements */
+  animation: fadeOut 3s forwards;
+  /* Animation for fade-out effect */
 }
 
 @keyframes fadeOut {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
   }
@@ -227,7 +238,8 @@ tbody tr:hover {
   left: 0;
   width: 90%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black overlay */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -302,18 +314,24 @@ tbody tr:hover {
   }
 
   .reportItem {
-    width: 100%; /* Make the report item full-width */
-    page-break-inside: avoid; /* Avoid breaking the table across pages */
+    width: 100%;
+    /* Make the report item full-width */
+    page-break-inside: avoid;
+    /* Avoid breaking the table across pages */
   }
 
   .reportTable {
-    width: 100%; /* Make the table inside the report item full-width */
+    width: 100%;
+    /* Make the table inside the report item full-width */
     border-collapse: collapse;
-    margin-bottom: 1em; /* Add some space between tables */
+    margin-bottom: 1em;
+    /* Add some space between tables */
   }
 
-  .reportTable th, .reportTable td {
-    border: 1px solid #ddd; /* Add borders to table cells */
+  .reportTable th,
+  .reportTable td {
+    border: 1px solid #ddd;
+    /* Add borders to table cells */
     padding: 8px;
     text-align: left;
   }
