--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -59,3 +59,12 @@
     /* Animation for fade-out effect */
   }
   
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+    }
+  }
