--- a/src/css/checkscoot.css
+++ b/src/css/checkscoot.css
@@ -41,3 +41,30 @@
     bottom: 180px;
     white-space: nowrap;
 }
+
+.done {
+    background-color: #4caf50; /* Green color */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .done:hover {
+    background-color: #45a049; /* Darker green color on hover */
+  }
+  
+  .viewDetails {
+    background-color: #007bff; /* Blue color */
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px; /* Adjust margin as needed */
+    cursor: pointer;
+  }
+  
+  .viewDetails:hover {
+    background-color: #0056b3; /* Darker blue color on hover */
+  }
