--- a/src/css/header.css
+++ b/src/css/header.css
@@ -466,6 +466,16 @@ a:hover {
   /* Animation for fade-out effect */
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
 .sent-notify {
   width: 20px;
   height: 20px;
