--- a/src/css/user_index.css
+++ b/src/css/user_index.css
@@ -128,3 +128,29 @@
 .button-group button.cancel {
     background-color: #ccc;
 }
+
+.success-message {
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #4CAF50;
+    /* Green color */
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 9999;
+    /* Ensure it's above other elements */
+    animation: fadeOut 3s forwards;
+    /* Animation for fade-out effect */
+  }
+  
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+    }
+  }
